--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   },
   "dependencies": {
     "axios": "^0.26.1",
-    "chalk": "^4.1.0",
+    "chalk": "^4.1.2",
     "commander": "^6.1.0",
     "dotenv": "^8.6.0",
     "http": "^0.0.1-security",
@@ -28,6 +28,7 @@
     "inquirer": "^8.2.1",
     "node-notifier": "^8.0.0",
     "ora": "^5.4.1",
+    "util": "^0.12.4",
     "xhr2": "^0.2.1",
     "xmlhttprequest": "^1.8.0"
   }
